# education_platform_project

./: .admin  .env.example  Dockerfile  Dockerfile.txt  Lern_sqlite_create.sql  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  test.txt
.education_platform_project_db/postgres/base/1/: pg_internal.init
.education_platform_project_db/postgres/base/16384/: 1247  1249  1259  16389  16390  16395  16398  16401  16403  16405  16406  16409  16411  16433  16445  16452  16454  16466  16481  16482  16497  16530  16531  (+27 more)
.education_platform_project_db/postgres/global/: 1260  pg_control  pg_internal.init
.education_platform_project_db/postgres/pg_stat/: pgstat.stat
education_platform/education_platform/: asgi.py  settings.py  urls.py  wsgi.py
education_platform/education_process/: admin.py  apps.py  models.py
education_platform/education_process/migrations/: 0001_add_course_model.py  0001_initial.py  0002_add_topic_model.py  0002_group_group_teacher_group_student_and_more.py  0003_add_test_model.py  0003_rename_id_group_course_group.py  0004_add_question_model.py  0004_remove_group_student_group_student.py  0005_add_answer_model.py  0006_add_article_model.py  0007_add_ctest_model.py
education_platform/users/: admin.py  forms.py  managers.py  models.py
education_platform/users/migrations/: 0001_add_user_model.py  0001_initial.py  0002_add_spec_model.py  0002_student_teacher.py  0003_add_student_model.py  0003_rename_id_user_student_user_and_more.py  0004_add_teacher_model.py  0004_remove_user_is_active.py  0005_add_group_model.py  0005_user_is_active.py
(+1 files in other folders)
